fixed footer gap at bottom of page

--- a/Resources/css/index.css
+++ b/Resources/css/index.css
@@ -153,7 +153,7 @@ main h1 {
 .photoFrame {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
+  border: 2px solid black;
   grid-area: 1 / 2 / span 2 / span 1;
   background-color: rgba(247, 244, 233, 1);
 }
@@ -215,7 +215,7 @@ footer {
   align-items: center;
   background-color: rgba(247, 244, 233, 1);
   color: white;
-  height: 30px;
+  height: auto;
   width: 100%;
   margin-top: auto;
   text-align: center;
